Fix tab spacing on small height screens

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,7 +28,6 @@ button:disabled {
 .off-screen {
     position: absolute;
     z-index: 2;
-    overflow: scroll;
     transition: 0.15s;
     top: 0;
     background-color: white;
@@ -42,6 +41,7 @@ button:disabled {
 .right-divs {
     @extend .off-screen;
     height: 100%;
+    overflow: scroll;
 }
 
 /* This is just for testing */
@@ -125,6 +125,8 @@ button:disabled {
 
 .current-display {
     margin: 0.5em;
+    overflow: scroll;
+    height: 100%;
 }
 
 .info-title {
